--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
+Bootstrap_Flask==2.3.3
 Flask==3.0.0
-Bootstrap-Flask==2.3.3
-flask_ckeditor==0.5.1
-flask_login==0.6.3
+Flask_CKEditor==0.5.1
+Flask_Login==0.6.3
 flask_sqlalchemy==3.1.1
 flask_wtf==1.2.1
+python-dotenv==1.0.0
 SQLAlchemy==2.0.25
 Werkzeug==3.0.1
-WTForms==3.1.1
-
-
-
+WTForms==3.1.2
