--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ python-dotenv==1.0.0
 SQLAlchemy==2.0.25
 Werkzeug==3.0.1
 WTForms==3.1.2
+sendgrid==6.11.0
 Gunicorn==21.2.0
 Psycopg2-binary==2.9.9
 Email-validator==2.1.0.post1
